syntax = "proto3";
package monitoring;
option go_package = "github.com/stupidrun/mon/api/proto";

message Metric {
  double cpu_usage = 1;
  double memory_usage = 2;
  double network_in = 3;
  double network_out = 4;
  int64 timestamp = 5;
}

message PushMetricsRequest {
  repeated Metric metrics = 1;
}

message PushMetricsResponse {
  bool success = 1;
  string message = 2;
}

service MonitoringService {
  rpc PushMetrics(PushMetricsRequest) returns (PushMetricsResponse);
}
